# Move-r

./: .gitmodules  BENCHMARKS.md  CMakeLists.txt  README.md
bench/: move_r_bench_int_rank_select.cpp
cli/: move-r-bench.cpp  move-r-build.cpp  move-r-count.cpp  move-r-locate.cpp  move-r-patterns.cpp  move-r-revert.cpp
cli/move-r-bench/: framework.hpp  indexes.hpp  move-r-bench.cpp
examples/: move_data_structure.cpp  move_r-queries.cpp  move_r-retrieval.cpp  move_r-store-load.cpp
include/move_r/: move_r.hpp
include/move_r/algorithms/: misc.cpp  queries.cpp
include/move_r/algorithms/construction/: construction.hpp
include/move_r/algorithms/construction/Big-BWT/: bwtparse.c  newscan.cpp  newscan.hpp  pfbwt.cpp  pfthreads.hpp  pscan.cpp  pscan.hpp  utils.c  utils.h  xerrors.h
include/move_r/algorithms/construction/Big-BWT/gsa/: gsacak.c  gsacak.h
include/move_r/algorithms/construction/modes/: bigbwt.cpp  common.cpp  in_memory.cpp  libsais.cpp  rlzdsa.cpp  sa.cpp  space_saving.cpp
include/move_r/data_structures/: avl_tree.hpp  doubly_linked_list.hpp  dynamic_insert_only_no_copy.hpp  file_vector.hpp  hybrid_bit_vector.hpp  interleaved_vectors.hpp  plain_bit_vector.hpp  rank_select_support.hpp  sd_array.hpp  string_rank_select_support.hpp
include/move_r/data_structures/move_data_structure/: move_data_structure.hpp  move_data_structure_l_.hpp  move_data_structure_lf.hpp  move_data_structure_phi.hpp  move_data_structure_str.hpp
include/move_r/data_structures/move_data_structure/construction/: construction.hpp
include/move_r/data_structures/move_data_structure/construction/algorithms/balancing/: v1_seq.cpp  v2_seq.cpp  v3_par.cpp  v3_seq.cpp  v4_par.cpp  v5_seq_par.cpp
include/move_r/data_structures/move_data_structure/construction/algorithms/construction/: v1.cpp  v1v2v3v4v5.cpp  v2v3v4.cpp  v5.cpp
include/move_r/data_structures/move_data_structure/construction/algorithms/misc/: verify_correctness.cpp
include/move_r/misc/: utils.hpp
measurements/: measure-a.sh  measure-all-texts.sh  measure-all.sh  measure-appendix-text.sh  measure-appendix.sh  measure-build-phases.sh  measure-main-text.sh  measure-main.sh  measure-text.sh
measurements/patterns/: EDGAR-patterns-bal  EDGAR-patterns-phi  Horspool-patterns-phi  Quicksort-patterns-phi  chr19.1000-patterns-phi  dewiki-patterns-phi  dewiki.64GiB-patterns-bal  dewiki.8GiB-patterns-phi  dna.001.1-patterns-bal  dna.001.1-patterns-phi  dna.200MB-patterns-bal  dna.200MB-patterns-phi  einstein.de.txt-patterns-phi  einstein.en.txt-patterns-phi  english-patterns-bal  english-patterns-phi  english.200MB-patterns-bal  english.200MB-patterns-phi  sars2-patterns-phi  world_leaders-patterns-bal  world_leaders-patterns-phi
tests/: test_move_data_structure.cpp  test_move_r.cpp  test_move_r_int.cpp
